fix: correcao do visibility switch darkmode

--- a/src/app/components/Header/style.scss
+++ b/src/app/components/Header/style.scss
@@ -71,6 +71,7 @@ header {
       transform: translateY(-1.25rem);
     }
     .switch-darkmode {
+      visibility: hidden;
       opacity: 0;
     }
   }
